--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "project-lvl1-s120",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "My first Hexlet project",
   "main": "index.js",
   "bin": {
@@ -9,13 +9,18 @@
   "scripts": {
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
     "babel-node": "babel-node",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "eslint": "eslint"
   },
   "devDependencies": {
-    "babel-cli": "latest",
-    "babel-core": "latest",
-    "babel-preset-env": "latest",
-    "babel-preset-stage-0": "latest"
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
+    "babel-eslint": "^7.2.3",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "eslint": "^4.4.1",
+    "eslint-config-airbnb-base": "^11.3.1",
+    "eslint-plugin-import": "^2.7.0"
   },
   "dependencies": {
     "readline-sync": "^1.4.7"
