--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "project-lvl1-s120",
-  "version": "1.0.8",
+  "version": "1.1.0",
   "description": "My first Hexlet project",
   "main": "index.js",
   "bin": {
     "brain-games": "dist/bin/brain-games.js",
     "brain-even": "dist/bin/brain-even.js",
-    "brain-calc": "dist/bin/brain-calc.js"
+    "brain-calc": "dist/bin/brain-calc.js",
+    "brain-gcd": "dist/bin/brain-gcd.js"
   },
   "scripts": {
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
