--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "project-lvl1-s120",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "My first Hexlet project",
   "main": "index.js",
   "bin": {
@@ -8,7 +8,8 @@
     "brain-even": "dist/bin/brain-even.js",
     "brain-calc": "dist/bin/brain-calc.js",
     "brain-gcd": "dist/bin/brain-gcd.js",
-    "brain-balance": "dist/bin/brain-balance.js"
+    "brain-balance": "dist/bin/brain-balance.js",
+    "brain-progression": "dist/bin/brain-progression.js"
   },
   "scripts": {
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
