--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "project-lvl1-s120",
-  "version": "1.1.3",
+  "version": "1.1.5",
   "description": "My first Hexlet project",
   "main": "index.js",
   "bin": {
@@ -9,7 +9,8 @@
     "brain-calc": "dist/bin/brain-calc.js",
     "brain-gcd": "dist/bin/brain-gcd.js",
     "brain-balance": "dist/bin/brain-balance.js",
-    "brain-progression": "dist/bin/brain-progression.js"
+    "brain-progression": "dist/bin/brain-progression.js",
+    "brain-prime": "dist/bin/brain-prime.js"
   },
   "scripts": {
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
